--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  padding: 30px;
   text-align: center;
 }
 
@@ -35,4 +36,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul,
+li {
+  list-style-type: none;
+  padding: 10px;
 }
